# SKI

./: .travis.yml  LICENSE  README.md  SKI.cabal  sampleLib.ski  stack.yaml
app/: Main.hs
src/: Core.hs  HereDoc.hs  Lib.hs  Repl.hs  SKILibrary.hs  Util.hs
src/Core/: Internal.hs
src/Repl/: Internal.hs
standardLibrary/: bool.ski  number.ski
test/: CoreSpec.hs  HereDocSpec.hs  ReplSpec.hs  doctest.hs
