name:                SKI
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SKI#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
  setup-depends:
    base,
    Cabal,
    cabal-doctest

library
  hs-source-dirs:      src
  exposed-modules:     Core, Repl, SKILibrary, Util, HereDoc
  build-depends:       base >= 4.7 && < 5, parsec, containers, safe-exceptions, directory, template-haskell
  default-language:    Haskell2010

executable SKI-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SKI, directory
  default-language:    Haskell2010

test-suite SKI-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SKI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             doctests.hs
  build-depends:       base
                     , doctest
                     , QuickCheck
                     , SKI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/SKI
